--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "ember test"
   },
   "devDependencies": {
-    "@ember/optional-features": "^1.1.0",
+    "@ember/jquery": "^1.1.0",
+    "@ember/optional-features": "^1.3.0",
     "@glimmer/component": "^1.0.0",
     "babel-eslint": "^10.0.3",
     "bootstrap": "^4.5.0",
@@ -44,7 +45,7 @@
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^4.6.0",
     "ember-resolver": "^7.0.0",
-    "ember-source": "~3.15.0",
+    "ember-source": "^3.18.1",
     "ember-welcome-page": "^4.0.0",
     "eslint-plugin-ember": "^7.7.1",
     "eslint-plugin-node": "^10.0.0",
