--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "ember-cli": "~3.15.2",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.13.0",
+    "ember-cli-chart": "^3.7.1",
+    "ember-cli-chartist": "^3.0.0",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-htmlbars": "^4.2.0",
